remove unwanted files

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <th>Movie</th>
       <th>Showtime</th>
-      <th>Seat Number</th>
+      <th>Total Seats</th>
       <th>Details</th>
       <th>Name</th>
       <th>Action</th>
